# ISLP

./: .python-version  README.md  pyproject.toml
Jupyter Labs/: 2.3 Introduction to Python.ipynb
Jupyter Labs/Chapter 2 Statistical Learning/: 2.3 Introduction to Python.ipynb  2.3 Lab - Introduction to Python.ipynb  2.4 Exercises.ipynb
Jupyter Labs/Chapter 3 Linear Regression/: 3.6 Lab - Linear Regression.ipynb  3.7 Exercises.ipynb
Jupyter Labs/Chapter 4 Classification/: 4.7 Lab - Logistic Regression, LDA, QDA, and KNN.ipynb
Jupyter Labs/Chapter 5 Resampling Methods/: 5.3 Lab - Cross-Validation and the Bootstrap.ipynb
