[project]
name = "islp-homework"
version = "0.1.0"
description = "Contains workbooks and solutions to problems found in the first edition of An Introduction to Statistical Learning with Python."
authors = [
    {name = "Justin Groves",email = "jagroves95@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "islp (>=0.4.1,<0.5.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
